Update android.md